(#66) - Fix: Jacoco in restserver now working
Co-authored-by: Lea <leaj@stud.ntnu.no>